--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@ body {
 p { 
     font-weight: 400;
 }
+
+.debug-wrap { 
+    width: 100%;
+    border-top: dashed 1px #fff;
+}
 .passmark { 
     color: #388aa3;
     font-size: 90%;
@@ -79,8 +84,16 @@ p {
     opacity: 0;
     min-height: 130vh;
     line-height: 130%;  
+    clear: both;
     
 }
+
+.slide { 
+    display: inline-block;
+    
+   
+}
+
 
 .stuck {
     position:fixed;
@@ -114,6 +127,7 @@ p {
     border-radius: 5px;
     opacity: 0.8;
     border: solid 1px #34aabc; 
+    
 }
 
 #slide-two .slide-inner  { 
