--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,11 @@ p {
     padding-top: 25px;
 }
 
+.bylines a { 
+    color: #31d5e8;
+    text-decoration: underline;
+}
+
 .label {
     font-weight: 300;
     color: #c1f0ff;
