--- a/styles.css
+++ b/styles.css
@@ -53,18 +53,27 @@ p {
 }
 .passmark { 
     color: #388aa3;
-    font-size: 90%;
+    font-size: 110%;
     font-family: "Open Sans", sans-serif, helvetica, arial;
     font-weight: 600;
+    line-height: 200%;
 }
 
 .passmark a { 
-    color: #62d1e5;
+    color: #fff;
     text-decoration: none;
 }
 
 .passmark a:hover { 
     opacity: 1;
+}
+
+a.pmsocial { 
+    font-size: 130%;
+    color: #fff;
+    opacity: 0.7;
+    padding: 5px;
+    
 }
 #chart { 
     position: fixed; 
@@ -125,6 +134,7 @@ p {
     line-height: 130%;  
     clear: both;
     
+    
 }
 
 .slide { 
@@ -132,6 +142,42 @@ p {
     
    
 }
+
+.mobile-warn { 
+    position: fixed; 
+    top: 0; 
+    left: 0; 
+    margin: 2%;
+    width: 82%;
+    height: auto;
+    padding: 7%;
+    background: #000;
+    opacity: 0.7; 
+    color: #fff;
+    z-index: 1000;
+    border: solid 1px #fff; 
+    border-radius: 5px;
+    opacity: 0;
+    visibility: hidden;
+    font-family: "Helvetica Neue", Helvetica, sans-serif;
+    text-align: center;
+    line-height: 150%;
+}
+
+.dismiss { 
+    padding: 3px 7px;
+    background: #fff;
+    color: #000;
+    font-weight: bold;
+    width: 30px;
+    border-radius: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+
+}
+
+
 
 
 .stuck {
@@ -150,7 +196,7 @@ p {
     font-family: Merriweather, serif;
     font-weight: 700;
     line-height: 130%;
-    margin-top: 70px;
+    margin-top: 10%;
     text-shadow: 3px 2px 2px rgba(0, 2, 0, 0.5);
     color: #fffcbc;
 }
@@ -169,9 +215,16 @@ p {
     
 }
 
-#slide-two .slide-inner  { 
+#slide-two { 
     opacity: 0;
+    max-height: 300px;
 }
+
+#slide-two { 
+    height: 500px;
+}
+
+
 
 .clear { 
     clear: both;
@@ -189,6 +242,10 @@ p {
 .bylines a { 
     color: #31d5e8;
     text-decoration: underline;
+}
+
+.bylines a:hover { 
+    color: #fff;
 }
 
 .label {
@@ -273,11 +330,77 @@ circle {
     color: #31D5E8
 }
 
+/* addthis */
+/* #at4-share { 
+    display: none;
+} */
 
+.social { 
+    font-size: 150%;
+    /* position: fixed;  */
+    width: 100%;
+    z-index: 500;
+
+    top: 0px;
+    left: 0;
+    background: #007184;
+    padding: 2px 10px;
+    /* opacity: 0.1; */
+
+
+}
+
+.social a { 
+    color:#007184;
+    /* opacity: 0.5; */
+}
+
+.social a:hover { 
+    opacity: 1;
+    color: #000;
+}
+/* 
+.twitter { 
+    color: #009EF6
+}
+
+.facebook { 
+    color: #3C539A;
+} */
+#slide-19-2 .slide-inner { 
+    background: #000;
+    opacity: 0.8;
+    color: #fff;
+    padding: 5%;
+    line-height: 180%;
+
+}
+
+#slide-19-2 .slide-inner a { 
+    font-size: 150%;
+    color: #fff;
+}
+
+.credits { 
+    font-size: 80%;
+    line-height: 160%;
+    margin-top: 30px;
+    color: gray;
+    font-weight: 400;
+}
+
+.credits a { 
+    color: #fff;
+    font-size: 100% !important;
+}
 
 
 
 @media only screen and (max-width: 650px) {
+    #slide-one { 
+        padding-top: 10%;
+    }
+    
     .desktop { 
         display: none; 
     }
@@ -296,7 +419,7 @@ circle {
     .slide-title { 
         width: 90%;
         padding: 5%;
-        font-size: 150%;
+        font-size: 180%;
     }
     .slide { 
         width: 90%;
